# Auto-DJ-Term-Project

./: CMakeLists.txt  Library.cpp  Library.h  Playlist.cpp  Playlist.h  PlaylistADT.h  PlaylistLib.cpp  PlaylistLib.h  PlaylistNode.cpp  PlaylistNode.h  README.md  Song.cpp  Song.h  SongLibADT.h  SongLibrary.cpp  SongLibrary.h  SongLibraryArray.cpp  SongLibraryArray.h  SongNode.cpp  SongNode.h  TestLib.h  main.cpp  playlistLibADT.h  tests.cpp
